apps/docs/content/docs/v2/e-commerce/rainy-days.mdx
---
title: Rainy Days
---

import { Hr } from "@/components/hr"
import { Callout } from "@/components/callout"
import { EndpointDetails } from "@/components/endpoint-details"
import { TypeTable } from "next-docs-ui/components/type-table"

These endpoints allow you to retrieve all products, or a single product by its id. The response will be an array of JSON objects if you request all products, or a single JSON object if you request a single product.

## The Rainy Days model

<TypeTable
  type={{
    id: { type: "string", description: "The id of the product." },
    title: { type: "string", description: "The title of the product." },
    description: { type: "string", description: "The description of the product." },
    gender: { type: "string", description: "Whether the product is made for male or female." },
    sizes: { type: "Array<string>", description: "A string array of the sizes of the product." },
    baseColor: { type: "string", description: "The main color of the product." },
    price: { type: "float", description: "The price of the product." },
    discountedPrice: { type: "float", description: "The discounted price of the product" },
    onSale: { type: "boolean", description: "Whether the product is on sale or not." },
    image: { type: "object", typeDescription: "Instance of `Media` model.", description: "The image of the product." },
    tags: { type: "Array<string>", description: "A string array of the tags of the product." },
    favorite: { type: "boolean", description: "Whether the product is a favorite or not." }
  }}
/>

<Hr />

## All products

<EndpointDetails path="/rainy-days" />

Retrieve all products.

```json title="Response"
{
  "data": [
    {
      "id": "b8b528fc-6c60-41f6-a5a9-9a8b27a9482a",
      "title": "Rainy Days Akra Jacket",
      "description": "The Women's Rainy Days Akra jacket is bound to be your new go-to water-repellent rain jacket.",
      "gender": "Female",
      "sizes": ["XS", "S", "M", "L", "XL", "XXL"],
      "baseColor": "Red",
      "price": 129.99,
      "discountedPrice": 119.99,
      "onSale": true,
      "image": {
        "url": "https://static.cloud.noroff.dev/api/rainy-days/0-akra-jacket.jpg",
        "alt": "An orange and grey jacket with a hood"
      },
      "tags": ["jacket", "womens"],
      "favorite": true
    },
    {
      "id": "97e77845-a485-4301-827f-51b673d4230f",
      "title": "Rainy Days M83 Jacket",
      "description": "The Women's Rainy Days M83 jacket delivers waterproof, breathable protection from head to waist. Perfect for the adventure seekers.",
      "gender": "Female",
      "sizes": ["XS", "S", "M", "L", "XL", "XXL"],
      "baseColor": "Black",
      "price": 109.99,
      "discountedPrice": 99.99,
      "onSale": true,
      "image": {
        "url": "https://static.cloud.noroff.dev/api/rainy-days/1-m83-jacket.jpg",
        "alt": "A women's black jacket with the brands logo on the front"
      },
      "tags": ["jacket", "womens"],
      "favorite": true
    }
    // ...
  ],
  "meta": {
    "isFirstPage": true,
    "isLastPage": true,
    "currentPage": 1,
    "previousPage": null,
    "nextPage": null,
    "pageCount": 1,
    "totalCount": 2
  }
}
```

<Hr />

## Single product

<EndpointDetails path="/rainy-days/<id>" />

Retrieve a single product by its id.

```json title="Response"
{
  "data": {
    "id": "b8b528fc-6c60-41f6-a5a9-9a8b27a9482a",
    "title": "Rainy Days Akra Jacket",
    "description": "The Women's Rainy Days Akra jacket is bound to be your new go-to water-repellent rain jacket.",
    "gender": "Female",
    "sizes": ["XS", "S", "M", "L", "XL", "XXL"],
    "baseColor": "Red",
    "price": 129.99,
    "discountedPrice": 119.99,
    "onSale": true,
    "image": {
      "url": "https://static.cloud.noroff.dev/api/rainy-days/0-akra-jacket.jpg",
      "alt": "An orange and grey jacket with a hood"
    },
    "tags": ["jacket", "womens"],
    "favorite": true
  },
  "meta": {}
}
```
